# Collections

./: .gitignore  .gitmodules  .travis.yml  BitString.cs  CMakeLists.txt  EnsureExtensions.cs  ISetExtensions.cs  Platform.Collections.csproj  Platform.Collections.sln  README.html  README.md  StringExtensions.cs  docfx.json  history.txt  index.html  index.json  manifest.json  toc.html  xrefmap.yml
.github/workflows/: AutoMerge.yml  CD.yml
Arrays/: ArrayFiller.cs  ArrayFiller[TElement, TReturnConstant].cs  ArrayFiller[TElement].cs  ArrayPool.cs  ArrayPool[T].cs  ArrayString.cs  CharArrayExtensions.cs
Concurrent/: ConcurrentQueueExtensions.cs  ConcurrentStackExtensions.cs
Lists/: CharIListExtensions.cs  IListComparer.cs  IListEqualityComparer.cs  IListExtensions.cs
Platform.Collections/: BitString.cs  BitStringExtensions.cs  ICollectionExtensions.cs  IDictionaryExtensions.cs  ISetExtensions.cs  Platform.Collections.csproj  StringExtensions.cs
Platform.Collections.Benchmarks/: BitStringBenchmarks.cs  Platform.Collections.Benchmarks.csproj  Program.cs
Platform.Collections.Tests/: BitStringTests.cs  CharsSegmentTests.cs  Platform.Collections.Tests.csproj  StringTests.cs
Platform.Collections/Arrays/: ArrayExtensions.cs  ArrayFiller[TElement, TReturnConstant].cs  ArrayFiller[TElement].cs  ArrayPool.cs  ArrayPool[T].cs  ArrayString.cs  CharArrayExtensions.cs  GenericArrayExtensions.cs
Platform.Collections/Concurrent/: ConcurrentQueueExtensions.cs  ConcurrentStackExtensions.cs
Platform.Collections/Lists/: CharIListExtensions.cs  IListComparer.cs  IListEqualityComparer.cs  IListExtensions.cs  ListFiller.cs
Platform.Collections/Segments/: CharSegment.cs  Segment.cs
Platform.Collections/Sets/: SetFiller.cs  (+1 more)
Segments/: CharSegment.cs  CharsSegment.cs  Segment.cs
Stacks/: DefaultStack.cs  IStack.cs  IStackExtensions.cs  IStackFactory.cs  StackExtensions.cs
Trees/: Node.cs
api/: Platform.Collections.Arrays.ArrayExtensions.html  Platform.Collections.Arrays.ArrayFiller-1.html  Platform.Collections.Arrays.ArrayFiller-2.html  Platform.Collections.Arrays.ArrayPool-1.html  Platform.Collections.Arrays.ArrayPool.html  Platform.Collections.Arrays.ArrayString-1.html  Platform.Collections.Arrays.CharArrayExtensions.html  Platform.Collections.Arrays.GenericArrayExtensions.html  Platform.Collections.Arrays.html  Platform.Collections.Benchmarks.BitStringBenchmarks.html  Platform.Collections.Benchmarks.html  Platform.Collections.BitString.html  Platform.Collections.BitStringExtensions.html  Platform.Collections.Concurrent.ConcurrentQueueExtensions.html  Platform.Collections.Concurrent.ConcurrentStackExtensions.html  Platform.Collections.Concurrent.html  Platform.Collections.EnsureExtensions.html  Platform.Collections.ICollectionExtensions.html  Platform.Collections.IDictionaryExtensions.html  Platform.Collections.ISetExtensions.html  Platform.Collections.Lists.CharIListExtensions.html  Platform.Collections.Lists.IListComparer-1.html  Platform.Collections.Lists.IListEqualityComparer-1.html  Platform.Collections.Lists.IListExtensions.html  Platform.Collections.Lists.ListFiller-2.html  Platform.Collections.Lists.html  Platform.Collections.Segments.CharSegment.html  Platform.Collections.Segments.Segment-1.html  Platform.Collections.Segments.Walkers.AllSegmentsWalkerBase-1.html  Platform.Collections.Segments.Walkers.AllSegmentsWalkerBase-2.html  Platform.Collections.Segments.Walkers.AllSegmentsWalkerBase.html  Platform.Collections.Segments.Walkers.AllSegmentsWalkerExtensions.html  Platform.Collections.Segments.Walkers.DictionaryBasedDuplicateSegmentsWalkerBase-1.html  Platform.Collections.Segments.Walkers.DictionaryBasedDuplicateSegmentsWalkerBase-2.html  Platform.Collections.Segments.Walkers.DuplicateSegmentsWalkerBase-1.html  Platform.Collections.Segments.Walkers.DuplicateSegmentsWalkerBase-2.html  Platform.Collections.Segments.Walkers.html  Platform.Collections.Segments.html  Platform.Collections.Sets.ISetExtensions.html  Platform.Collections.Sets.SetFiller-2.html  (+18 more)
cpp/: .clang-format  CMakeLists.txt  build_and_test.sh  build_and_test_gitpod.sh  conanfile.py  conanfile.txt  install-local-conan-dependencies.sh
cpp/Platform.Collections/: BitString.h  BitStringExtensions.h  CMakeLists.txt  EnsureExtensions.h  ICollectionExtensions.h  IDictionaryExtensions.h  Platform.Collections.TemplateLibrary.nuspec  Platform.Collections.h  StringExtensions.h
cpp/Platform.Collections.Tests/: AllTests.cpp  ArrayTests.cpp  BestWalkersSandbox.cpp  BitStringTests.cpp  CMakeLists.txt  CharsSegmentTests.cpp  ConceptsTests.cpp  FillersTests.cpp  ListTests.cpp  NodeTests.cpp  Platform.Collections.Tests.cpp  StackTests.cpp  StringTests.cpp  WalkersSandbox.cpp  WalkersTests.cpp  test.cpp
cpp/Platform.Collections/.Concepts/: BaseConcepts.h
cpp/Platform.Collections/Arrays/: ArrayFiller[TElement, TReturnConstant].h  ArrayFiller[TElement].h  ArrayPool.h  ArrayPool[T].h  ArrayString.h  CharArrayExtensions.h  GenericArrayExtensions.h
cpp/Platform.Collections/Concurrent/: ConcurrentQueueExtensions.h  ConcurrentStackExtensions.h
cpp/Platform.Collections/Lists/: CharIListExtensions.h  IListComparer.h  IListEqualityComparer.h  IListExtensions.h  ListFiller.h
cpp/Platform.Collections/Segments/: CharSegment.h  Segment.h
cpp/Platform.Collections/Segments/Walkers/: AllSegmentsWalkerBase.h  AllSegmentsWalkerBase[T, TSegment].h  AllSegmentsWalkerBase[T].h  AllSegmentsWalkerExtensions.h  DictionaryBasedDuplicateSegmentsWalkerBase.h  DictionaryBasedDuplicateSegmentsWalkerBase[T, Segment].h  DictionaryBasedDuplicateSegmentsWalkerBase[T].h  DuplicateSegmentsWalkerBase.h  DuplicateSegmentsWalkerBase[T, TSegment].h  DuplicateSegmentsWalkerBase[T].h  Polymorph.h  SegmentsWalkerBase.h
cpp/Platform.Collections/Sets/: ISetExtensions.h  SetFiller.h
cpp/Platform.Collections/Stacks/: CStack.h  DefaultStack.h  IStack.h  IStackExtensions.h  IStackFactory.h  StackExtensions.h
cpp/Platform.Collections/Trees/: Node.h
csharp/: Platform.Collections.sln  README.html  index.html  index.json  manifest.json  toc.html  xrefmap.yml
(+118 files in other folders)
